fixing navbar on mobile

--- a/styles/header_style.css
+++ b/styles/header_style.css
@@ -20,7 +20,6 @@
     font-family: 'Kaushan Script', sans-serif;
     font-size: 18px;
     font-color:white;
-    padding-bottom:10px;
 }
 .navbar .navbar-brand {
     padding-top: 0px;
@@ -30,7 +29,7 @@
     height: 50px;
 }
 
-/*
+
 .navbar-alignit .navbar-header {
     -webkit-transform-style: preserve-3d;
     -moz-transform-style: preserve-3d;
@@ -46,7 +45,7 @@
     margin-right: 15px;
     margin-left: 15px;
 }
-*/
+
 nav.navbar {
     width: inherit;
     margin-left:auto;
